# bmm

./: Cargo.toml  README.md
docs/examples/: basic_bookmark.toml  basic_bookmarks.toml
src/: cli.rs  config.rs  conifg.rs  main.rs
src/tui/: app.rs  mod.rs  ui.rs  utils.rs
