[package]
name = "bmm"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["ArkhamCookie <cargo@mail.arkhamcookie.com>"]
description = "BookMark Manager (bmm) is a simple way to manage bookmarks from a TOML file."
homepage = "https://github.com/ArkhamCookie/bmm"
repository = "https://github.com/ArkhamCookie/bmm"
readme = "README.md"
keywords = ["bookmarks", "cli", "tui"]
exclude = []

[dependencies]
clap = { version = "4.5.57", features = ["cargo", "derive"] }
colored = "3.1.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
terminal-link = "0.1.0"
toml = "0.9.11"
tui-input = "0.15.0"
